# redscribe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
redscribe/: __init__.py  cli.py
